cluster/services/chiz-gateway/chiz-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: reg.chiz.work.gd/gateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          volumeMounts:
            - name: logs
              mountPath: /app/logs
      volumes:
        - name: logs
          emptyDir: {}
      imagePullSecrets:
        - name: regcred
