cluster/services/chiz-gateway/chiz-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chiz-gateway
  namespace: default
spec:
  selector:
    app: gateway
  ports:
    - port: 8002
      targetPort: 8002
